tests/fixtures/svs-v3/invalid/future-bootstrap.hex
245e065c071508036e646e080b7376732d76332d746573743601031400151ac918ca16070908046e6f6465080161d209d404f4865700d6010116031b01001720852bc10860ce651e4651175e1718be8b5e1031ac4bfa0c010078c717cbffceb0
